# cs237-upstream

./: .gitignore  CMakeLists.txt
cmake/: cs237-config.cmake
cmake/modules/: FindGLFW.cmake  FindVULKAN.cmake  Findglfw3.cmake  Findglm.cmake
config/: cs237-config.h.cmake
cs237-library/: CMakeLists.txt
cs237-library/include/: cs237-aabb.hpp  cs237-application.hpp  cs237-buffer.hpp  cs237-config.h  cs237-image.hpp  cs237-memory-obj.hpp  cs237-pipeline.hpp  cs237-shader.hpp  cs237-texture.hpp  cs237-types.hpp  cs237-window.hpp  cs237.hpp  json.hpp  obj.hpp
cs237-library/src/: CMakeLists.txt  aabb.cpp  application.cpp  image.cpp  json-parser.cpp  json.cpp  memory-obj.cpp  mtl-reader.cpp  shader.cpp  texture.cpp  window.cpp
labs/: CMakeLists.txt
labs/lab1/: CMakeLists.txt
labs/lab1/shaders/: CMakeLists.txt  no-light.frag  no-light.vert
labs/lab1/src/: CMakeLists.txt  main.cpp
labs/lab2/: CMakeLists.txt
labs/lab2/shaders/: CMakeLists.txt
labs/lab2/src/: CMakeLists.txt  main.cpp
labs/lab3/: CMakeLists.txt
labs/lab3/shaders/: CMakeLists.txt  shader.frag  shader.vert
labs/lab3/src/: CMakeLists.txt  main.cpp  mesh-data.cpp  mesh.hpp
projs/: CMakeLists.txt
projs/proj1/: CMakeLists.txt
projs/proj1/data/simple1/: scene.json
projs/proj1/data/simple2/: scene.json
projs/proj1/shaders/: CMakeLists.txt
projs/proj1/src/: CMakeLists.txt  app.cpp  app.hpp  instance.hpp  main.cpp  mesh.cpp  mesh.hpp  scene.cpp  scene.hpp  vertex.hpp  window.cpp  window.hpp
projs/proj2/: CMakeLists.txt
projs/proj2/data/earth/: scene.json
projs/proj2/data/ground+rock/: scene.json
projs/proj2/data/ground1/: scene.json
projs/proj2/data/ground2/: scene.json
projs/proj2/data/simple1/: scene.json
projs/proj2/data/simple2/: scene.json
projs/proj2/shaders/: CMakeLists.txt
projs/proj2/src/: CMakeLists.txt  app.cpp  app.hpp  height-field.cpp  height-field.hpp  instance.hpp  main.cpp  mesh.cpp  mesh.hpp  render-modes.hpp  scene.cpp  scene.hpp  vertex.hpp  window.cpp  window.hpp
